# fileTalk

./: Dockerfile  L07_Probabilidades_vf_corregido.xlsx  README.md  config.properties  pom.xml  requisitos.txt
data/: archivos.sh  config.properties  git.txt  server_config.ini
data/estructura/: funciones.txt  nuevaVersion.txt  recomendaciones.txt  version1.0.txt
estructura/: Estructura.txt  EstructuraAvanzada.txt  recomedacionClases.txt
nativo/: nativo.kdev4
nativo/.kdev4/: nativo.kdev4
nativo/FileTalk/: CMakeLists.txt  FileTalk.kdev4  main.cpp  servidor.cpp
nativo/FileTalk/.kdev4/: FileTalk.kdev4
nativo/FileTalk/src/models/server/: clienthandler.cpp  clienthandler.h  servidor.cpp  servidor.h
nativo/FileTalk/src/models/socket/: socket_abstraction.h  socket_factory.h  unixsocket.cpp  unixsocket.h
rpm/: comandos.sh
rpm/rpmbuild/SOURCES/: FileTalk.desktop
rpm/rpmbuild/SPECS/: setup.spec
src/main/java/: module-info.java
src/main/java/org/filetalk/filetalk/: Main.java  MainView.java  MainViewController.java
src/main/java/org/filetalk/filetalk/Client/: Client.java  ClientInfo.java  ConfiguracionCliente.java  DirectoryTransferManager.java  FileTransferManager.java  TransferManager.java  UtilidadesCliente.java
src/main/java/org/filetalk/filetalk/server/: ClientHandler.java  ConfiguracionServidor.java  Server.java
src/main/java/org/filetalk/filetalk/shared/: Alert.java  Logger.java  (+8 more)
src/main/resources/: log4j2.xml 
src/main/resources/org/filetalk/filetalk/: main-view.fxml  styles.css
src/test/java/: ClientTest.java
windows/: compilador.iss
(+31 files in other folders)
